--- a/index.html
+++ b/index.html
@@ -1,62 +1,221 @@
-<!DOCTYPE html>
-<html lang="en">
+<!doctype html>
+<html class="no-js" lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<title>PS70: Intro to Digital Fabrication </title>
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="./style.css" rel="stylesheet">
+  <title>PS70: Introduction to Digital Fabrication by Chris Wang</title>
 
-<nav class="navbar navbar-expand-sm navbar-light bg-light">
-  <div style="align-items: left; justify-content:left;" class="container-fluid">
-    <h3 class="nav-title"> PS70: Intro to Digital Fabrication</h3>
-    <div class="navbar-nav">
-      <h4><a class="nav-link" href="./index.html">Home</a></h4>
-      <h4><a class="nav-link" href="./about.html">About</a></h4>
-    </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
+  <link href="./css/style.css" rel="stylesheet">
+
+</head>
+<body>
+
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="people/chriswang/index.html">Home</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+    <ul class="navbar-nav">
+      <!-- <li class="nav-item active">
+        <a class="nav-link" href="people/chriswang/index.html">Home <span class="sr-only">(current)</span></a>
+      </li> -->
+      <li class="nav-item">
+        <a class="nav-link" href="./final.html">Final Project</a>
+      </li>
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Weekly Projects
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+          <a class="dropdown-item" href="./week1/index.html">Week 1</a>
+          <a class="dropdown-item" href="./week2/index.html">Week 2</a>
+          <a class="dropdown-item" href="./week3/index.html">Week 3</a>
+          <a class="dropdown-item" href="./week4/index.html">Week 4</a>
+          <a class="dropdown-item" href="./week5/index.html">Week 5</a>
+         <a class="dropdown-item" href="./week6/index.html">Week 6</a>
+         <a class="dropdown-item" href="./week7/index.html">Week 7</a>
+         <a class="dropdown-item" href="./index8.html">Week 8</a>
+         <a class="dropdown-item" href="./index9.html">Week 9</a>
+         <a class="dropdown-item" href="./index10.html">Week 10</a>
+         <a class="dropdown-item" href="./index11.html">Week 11</a>
+         <a class="dropdown-item" href="./index12.html">Week 12</a>
+        </div>
+      </li>
+      <li class="nav-item">
+            <a class="nav-link" href="http://fab.cba.mit.edu/classes/MAS.863/">Back to Class Site</a>
+      </li>
+    </ul>
   </div>
 </nav>
 
-<body>
-
-<xmp style="display:none;">
-
-<div class="container-fluid bg-3 text-center">
-  
-  <div class="row">
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Week 1: Introduction](./01_intro/index.html)
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
-    </div>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
-    </div>
-    <div class="col-sm-4">
-      ![sewing image](./01_intro/sew.png) 
-      [Broken Link]()
-    </div>
-  </div>
-</div>
+<div id="header">
+    <iframe src="./head.html"  style="border: none;" width="100%" height="180px;" scrolling="no" ></iframe>
 </div>
 
-</xmp>
+<!-- <div class="row">
+  <div class="small-12 medium-12 large-12 small-centered columns">
+<span>Applications for PS70 are due Wednesday, Aug 24th. Late applicants may be added to the waitlist, but early applicants will get first consideration. </span>
+</div></div> -->
+
+<div class="row">
+  <div class="small-12 medium-12 large-12 small-centered columns">
+    <ul class="small-block-grid-1 medium-block-grid-5 large-block-grid-5 inline-list-custom">
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-01.png)">
+            <a href="01_intro/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="01_intro/index.html">1: Introduction & Documentation</a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-04.png)">
+            <a href="02_cutting/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="02_cutting/index.html">2: 2D Design & Cutting</a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-02.png)">
+            <a href="03_tools/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="03_tools/index.html">3: Hand tools and fabrication </a></div>
+        </div>
+      </li>
+
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-06.png)">
+            <a href="05_3d/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="05_3d/index.html">4: 3D Design & Printing </a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-05.png)">
+            <a href="04_arduino/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="04_arduino/index.html">5: Microcontroller Programming </a></div>
+        </div>  
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-09.png)">
+            <a href="06_input/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="06_input/index.html">6: Electronic Input Devices </a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-07.png)">
+            <a href="08_output/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="08_output/index.html">7: Electronic Output Devices  </a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-08.png)">
+            <a href="07_cnc/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="07_cnc/index.html">8: CNC Milling, Molding & Casting </a></div>
+        </div>
+      </li>
+
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/iot.png)">
+            <a href="09_networking/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="09_networking/index.html">9: Radio, WiFi, Bluetooth (IoT)</a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/machine.png)">
+            <a href="10_machines/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="10_machines/index.html">10: Machine Building and End Effectors</a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-11.png)">
+            <a href="11_programming/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="11_programming/index.html">11: Computer Programming </a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-10.png)">
+            <a href="12_wildcard/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="12_wildcard/index.html">12: Wildcard  </a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-03.png)">
+            <a href="13_integration/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="13_integration/index.html">13: Project Integration </a></div>
+        </div>
+      </li>
+
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-12.png)">
+            <a href="20_final/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="20_final/index.html">14: Project Prep </a></div>
+        </div>
+      </li>
+
+      <li>
+        <div class="thumbnail">
+          <div class="thumbnail-img" style ="background-image: url(data/icons-13.png)">
+            <a href="20_final/index.html" ><img class ="transparent"/></a>
+          </div>
+          <div class="thumbnail-caption"><a class="caption-link" href="20_final/index.html">Final Project</a></div>
+        </div>
+      </li>
+
+    </ul>
+  </div>
+
+</div>
+
+<div id="footer"></div>
+
+<script src="js/vendor/jquery.min.js"></script>
+<script src="js/foundation.min.js"></script>
+<script src="js/htdaa.js"></script>
+
 </body>
-
-<script src="./strapdown.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" ></script>
-
 </html>
